Sort titlebar buttons and fix video on mobile

--- a/frontend/app/styles/home.css
+++ b/frontend/app/styles/home.css
@@ -7,6 +7,10 @@
   z-index: 1;
 }
 
+#jumbo-video::-webkit-media-controls {
+  display: none;
+}
+
 #title-container {
   position: absolute;
   z-index: 2;
